ui/v2.5/src/components/List/styles.scss
.pagination {
  .btn {
    border-left: 1px solid $body-bg;
    border-right: 1px solid $body-bg;
    flex-grow: 0;
    padding-left: 15px;
    padding-right: 15px;
    transition: none;

    &:first-child {
      border-left: none;
    }

    &:last-child {
      border-right: none;
    }
  }
}

.center-text {
  text-align: center;
}

input[type="range"].zoom-slider {
  height: 100%;
  margin: 0;
  max-width: 60px;
  padding-left: 0;
  padding-right: 0;
}

.query-text-field-group {
  align-items: stretch;
  display: flex;
  flex-wrap: wrap;
  position: relative;
}

.query-text-field {
  border: 0;
  width: 50%;
}

.query-text-field-clear {
  background-color: $secondary;
  color: $text-muted;
  font-size: $btn-font-size-sm;
  margin: $btn-padding-y $btn-padding-x;
  padding: 0;
  position: absolute;
  right: 0;
  z-index: 4;

  &:hover,
  &:focus,
  &:active,
  &:not(:disabled):not(.disabled):active,
  &:not(:disabled):not(.disabled):active:focus {
    background-color: $secondary;
    border-color: transparent;
    box-shadow: none;
  }
}

.saved-filter-list-menu {
  width: 300px;

  .set-as-default-button {
    float: right;
  }

  .LoadingIndicator {
    height: auto;
    text-align: center;

    .spinner-border {
      height: 1.5rem;
      width: 1.5rem;
    }
  }
}

.saved-filter-list {
  list-style: none;
  margin-bottom: 0;
  max-height: 230px;
  overflow-y: auto;
  padding-left: 0;

  .dropdown-item-container {
    display: flex;

    .dropdown-item {
      align-items: center;
      display: inline;
      overflow-x: hidden;
      padding-right: 0.25rem;
      text-overflow: ellipsis;
    }

    .btn-group {
      margin-left: auto;
    }

    .delete-button {
      color: $danger;
    }
  }
}

.add-filter-dialog .rating-stars {
  font-size: 1.3em;
  margin-left: 0.25em;
}

.rating-filter .and-divider {
  margin-left: 0.5em;
}

.edit-filter-dialog {
  .modal-body {
    padding-left: 0;
    padding-right: 0;
  }

  .filter-tags {
    border-top: 1px solid rgb(16 22 26 / 40%);
    padding: 1rem 1rem 0 1rem;
  }

  .criterion-list {
    flex-direction: column;
    flex-wrap: nowrap;
    max-height: 550px;

    .card {
      border: 1px solid rgb(16 22 26 / 40%);
      box-shadow: none;
      margin: 0 0 -1px;
      padding: 0;

      .collapse-icon {
        margin-left: 0;
      }

      .card-header {
        cursor: pointer;
        display: flex;
        justify-content: space-between;
      }
    }

    .remove-criterion-button {
      border: 0;
      color: $danger;
      padding-bottom: 0;
      padding-top: 0;
    }
  }

  .edit-filter-right {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-left: 1rem;
    padding-right: 1rem;
    width: 100%;
  }
}

.modifier-selector {
  margin-bottom: 1rem;

  // to accommodate for caret
  padding-right: 2rem;
}

.filter-tags .clear-all-button {
  color: $text-color;
  // to match filter pills
  line-height: 16px;
  padding: 0;
}

.filter-button {
  .fa-icon {
    margin: 0;
  }

  .badge {
    position: absolute;
    right: -3px;

    // button group has a z-index of 1
    z-index: 2;
  }
}

.pinIcon {
  position: absolute;
  right: 5%;
}

.tilted {
  transform: rotate(45deg);
}

.divider {
  border-bottom: 1px solid rgb(222, 226, 230);
  border-top: 1px solid rgb(222, 226, 230);
  margin-bottom: 5%;
  margin-left: 5%;
  margin-top: 5%;
  width: 90%;
}

